--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,21 +1,28 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500&display=swap");
 
 .navbar {
   display: flex;
   height: 10vh;
+  width: 100%;
   justify-content: space-between;
   padding: 0 50px;
   box-sizing: border-box;
   align-items: center;
-  overflow:hidden;
+  overflow: hidden;
   z-index: 1;
 }
 
-#wrapper ul, #wrapper ul li > * {
- text-decoration: none;
- list-style: none;
- color: black;
- font-size: medium;
+#wrapper ul,
+#wrapper ul li > * {
+  text-decoration: none;
+  list-style: none;
+  color: black;
+  font-size: medium;
+}
+
+.whiteNavBarWrapper ul,
+.whiteNavBarWrapper ul li > * {
+  color: rgb(255, 255, 255) !important;
 }
 
 .navbar ul {
@@ -27,27 +34,32 @@
   font-weight: bold;
 }
 
-.nav-link { line-height: 30px }
+.nav-link {
+  line-height: 30px;
+}
 
-li.different{
-  border:none;
+li.different {
+  border: none;
   position: relative;
 }
-li.different:hover{
+li.different:hover {
   border: none;
 }
 
-.different::after{
-  content: '';
+.different::after {
+  content: "";
   position: absolute;
   width: 0px;
   height: 3px;
   left: 50%;
-  bottom:0;
+  bottom: 0;
   background-color: rgb(0, 0, 0);
-  transition: all ease-in-out .2s;
+  transition: all ease-in-out 0.2s;
 }
-.different:hover::after{
+.whiteNavBarDifferent::after {
+  background-color: rgb(255, 255, 255) !important;
+}
+.different:hover::after {
   width: 100%;
   left: 0;
 }
@@ -61,10 +73,28 @@ li.different:hover{
   text-decoration: none;
   color: black;
 }
+.whiteDedra {
+  color: rgb(255, 255, 255) !important;
+}
 
 .dedra-logo {
   width: 40px;
   height: auto;
+}
+
+.dedra-logo-white {
+  width: 40px;
+  height: auto;
+}
+
+.navbar .dedra-logo {
+  animation: rotateIn;
+  animation-duration: 2s;
+}
+
+.navbar .dedra-logo-white {
+  animation: wobble;
+  animation-duration: 0.8s;
 }
 
 .hbrgerLogo {
@@ -81,7 +111,6 @@ ul.mobile-menu {
 }
 
 @media screen and (max-width: 900px) {
-
   .hbrgerLogo {
     display: block;
     position: absolute;
@@ -102,14 +131,14 @@ ul.mobile-menu {
     margin-left: -110%;
     z-index: 1;
   }
-  
+
   .mobile-menu li {
     margin: 25px 0;
     font-size: 1.2em;
   }
 
-  .nav-link, .nav-link > * {
+  .nav-link,
+  .nav-link > * {
     color: #000000;
   }
-
 }
