--- a/src/components/emailus.css
+++ b/src/components/emailus.css
@@ -1,156 +1,154 @@
-
-/* btn styles*/ 
-.email-us { 
-	margin-right: 1em ;
-	width: 100vw;
-	height: 100%;
-	display: flex;
-	align-items: flex-start;
-	justify-content: center;
+/* btn styles*/
+.email-us {
+  margin-right: 1em;
+  width: 100vw;
+  height: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
 }
 
 .buttton-wrapper a {
-	position: absolute;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	text-transform: uppercase;
-	text-decoration: none;
-	text-align: center;
-	color: rgb(0, 0, 0);
-	font-size: 30px;
-  	font-weight: 900;
-  	padding: 6.5px;
-  	margin-left: -0.8em ;
-	z-index: 3;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-transform: uppercase;
+  text-decoration: none;
+  text-align: center;
+  color: rgb(0, 0, 0);
+  font-size: 30px;
+  font-weight: 900;
+  padding: 6.5px;
+  margin-left: -0.8em;
+  z-index: 3;
 }
 
 .buttton-wrapper a:active {
-  background-color: rgba(0,0,0,0.1);
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 .buttton-wrapper a::before,
 .buttton-wrapper a::after,
 .buttton-wrapper span::before,
 .buttton-wrapper span::after {
-	content: '';
-	position: absolute;
-	width: 8px;
-	height: 8px;
-	background: transparent;
-	transition: 0.7s;
-	-webkit-mix-blend-mode: hue;
+  content: "";
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  background: transparent;
+  transition: 0.7s;
+  -webkit-mix-blend-mode: hue;
 }
 
 .buttton-wrapper a::before {
-	top: -2px;
-	left: -2px;
-	border-top: 2px solid rgb(0, 0, 0);
-	border-left: 2px solid rgb(0, 0, 0);
+  top: -2px;
+  left: -2px;
+  border-top: 2px solid rgb(0, 0, 0);
+  border-left: 2px solid rgb(0, 0, 0);
 }
 .buttton-wrapper a::after {
-	top: -2px;
-	right: -2px;
-	border-top: 2px solid rgb(0, 0, 0);
-	border-right: 2px solid rgb(0, 0, 0);
+  top: -2px;
+  right: -2px;
+  border-top: 2px solid rgb(0, 0, 0);
+  border-right: 2px solid rgb(0, 0, 0);
 }
 
 .buttton-wrapper span::before {
-	bottom: -2px;
-	left: -2px;
-	border-bottom: 2px solid rgb(0, 0, 0);
-	border-left: 2px solid rgb(0, 0, 0);
+  bottom: -2px;
+  left: -2px;
+  border-bottom: 2px solid rgb(0, 0, 0);
+  border-left: 2px solid rgb(0, 0, 0);
 }
 .buttton-wrapper span::after {
-	bottom: -2px;
-	right: -2px;
-	border-bottom: 2px solid rgb(0, 0, 0);
-	border-right: 2px solid rgb(0, 0, 0);
+  bottom: -2px;
+  right: -2px;
+  border-bottom: 2px solid rgb(0, 0, 0);
+  border-right: 2px solid rgb(0, 0, 0);
 }
-
 
 a:hover::before,
 a:hover::after,
 a:hover span::before,
-a:hover span::after  {
-	width: calc( 180px / 2);
-	height: calc( 50px / 2);
+a:hover span::after {
+  width: calc(180px / 2);
+  height: calc(50px / 2);
 }
 
-/* form styles*/ 
+/* form styles*/
 
 .form-style-9 {
-	background: transparent;
-	height: min-content;
-	display: none;
-	width: 700px;
-	margin-bottom: 10em;
-	transition: margin-bottom 700ms;
+  background: transparent;
+  height: min-content;
+  display: none;
+  width: 700px;
+  margin-bottom: 10em;
+  transition: margin-bottom 700ms;
 }
 
-.form-style-9 .form-list{
-	padding:0;
-	margin:0;
-	list-style:none;
+.form-style-9 .form-list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
-.form-style-9 .form-list li{
-	display: block;
-	min-height: min-content;
-	margin-top: 10px;
+.form-style-9 .form-list li {
+  display: block;
+  min-height: min-content;
+  margin-top: 10px;
 }
-.form-style-9 .form-list li  .field-style{
-	box-sizing: border-box; 
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box; 
-	padding: 8px;
-	outline: none;
-	background: transparent;
-	border-bottom: 2px solid #000000;
-	-webkit-transition: all 0.30s ease-in-out;
-	-moz-transition: all 0.30s ease-in-out;
-	-ms-transition: all 0.30s ease-in-out;
-	transition: all 0.30s ease-in-out;
-
-}.form-style-9 .form-list li  .field-style:focus{
-	box-shadow: 0 0 5px #e0e0e0;
-	border:1px solid #e0e0e0;
+.form-style-9 .form-list li .field-style {
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  padding: 8px;
+  outline: none;
+  background: transparent;
+  border-bottom: 2px solid #000000;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
-.form-style-9 .form-list li .field-split{
-	width: 49%;
-	margin-top: 10px;
+.form-style-9 .form-list li .field-style:focus {
+  box-shadow: 0 0 5px #e0e0e0;
+  border: 1px solid #e0e0e0;
 }
-.form-style-9 .form-list li .field-full{
-	width: 100%;
-	margin-top: 10px;
+.form-style-9 .form-list li .field-split {
+  width: 49%;
+  margin-top: 10px;
 }
-.form-style-9 .form-list li input.align-left{
-	float:left;
+.form-style-9 .form-list li .field-full {
+  width: 100%;
+  margin-top: 10px;
 }
-.form-style-9 .form-list li input.align-right{
-	float:right;
+.form-style-9 .form-list li input.align-left {
+  float: left;
 }
-.form-style-9 .form-list li textarea{
-	width: 100%;
-	height: 100px;
+.form-style-9 .form-list li input.align-right {
+  float: right;
 }
-.form-style-9 .form-list li input[type="button"], 
+.form-style-9 .form-list li textarea {
+  width: 100%;
+  height: 100px;
+}
+.form-style-9 .form-list li input[type="button"],
 .form-style-9 .form-list li input[type="submit"] {
-	background: transparent;
-	cursor: pointer;
-	color: #000000;
-	border: 1px solid black;
-	padding: 8px 18px;
-	text-decoration: none;
-	font: 12px Arial, Helvetica, sans-serif;
-	margin: 0;
+  background: transparent;
+  cursor: pointer;
+  color: #000000;
+  border: 1px solid black;
+  padding: 8px 18px;
+  text-decoration: none;
+  font: 12px Arial, Helvetica, sans-serif;
+  margin: 0;
 }
-.form-style-9 ul li input[type="button"]:hover, 
+.form-style-9 ul li input[type="button"]:hover,
 .form-style-9 ul li input[type="submit"]:hover {
-	background-color: #000000;
-	color: white;
+  background-color: #000000;
+  color: white;
 }
 
 @media screen and (max-width: 900px) {
-
-	.form-style-9 { width: 78%; }
-  
+  .form-style-9 {
+    width: 78%;
   }
+}
