--- a/src/components/ConnectFooter.css
+++ b/src/components/ConnectFooter.css
@@ -17,6 +17,10 @@
   margin-left: 1em;
 }
 
+.cn-nowrap {
+  white-space: nowrap;
+}
+
 .cn-rightpart {
   flex: 1;
   font-weight: bolder;
@@ -30,6 +34,7 @@
 .cn-nav-link {
   color: black;
   text-decoration: underline;
+  white-space: nowrap;
 }
 
 @media (max-width: 900px) {
