--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
   font-weight: 500;
   margin: 0;
   border: 0;
+  user-select: none;
 }
 
 /* Page d'accueil */
@@ -249,7 +250,7 @@
 /* ABOUT PAGE */
 
 .aboutpage {
-  width: 100vw;
+  width: 100%;
   height: 100%;
   background: -moz-linear-gradient(
     270deg,
@@ -276,7 +277,7 @@
   font-size: 1.5em;
 }
 .slogancontainer {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -330,7 +331,7 @@
 }
 
 .historycontainer {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: flex;
   align-items: center;
@@ -350,7 +351,7 @@
 }
 
 .teamcontainer {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -362,6 +363,22 @@
 .teammembers {
   display: flex;
   column-gap: 7em;
+  margin: 3em;
+}
+
+.teammembers img {
+  /* contain */
+  object-fit: cover;
+}
+
+@media screen and (max-width: 1080px) {
+  .teamcontainer {
+    row-gap: 0;
+  }
+  .teammembers {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 }
 
 @media screen and (max-width: 900px) {
@@ -434,6 +451,11 @@
 .stay-connected,
 .buttton-wrapper {
   animation: backInRight;
+  animation-duration: 1s;
+}
+
+.email {
+  animation: backInLeft;
   animation-duration: 1s;
 }
 
@@ -525,13 +547,13 @@ path {
 
 #pp-navbar {
   position: sticky;
-  top: 0;
+  top: 10vh;
   right: 0;
   left: 0;
   bottom: 0;
   background: rgb(226, 226, 226);
   border: 1px solid black;
-  height: 100vh;
+  height: 90vh;
 }
 
 #pp-navbar header {
