--- a/src/components/ConnectFooter.css
+++ b/src/components/ConnectFooter.css
@@ -33,8 +33,22 @@
 
 .cn-nav-link {
   color: black;
-  text-decoration: underline;
+  text-decoration: none;
   white-space: nowrap;
+}
+
+.cn-nav-link::after {
+  content: "";
+  display: block;
+  width: 0;
+  height: 2px !important;
+  background: black;
+  transition: width 0.3s;
+}
+
+.cn-nav-link:hover::after {
+  width: 100%;
+  height: 2px !important;
 }
 
 @media (max-width: 900px) {
