--- a/src/App.css
+++ b/src/App.css
@@ -122,106 +122,8 @@
     justify-content: center;
   }
 }
-/* Page GAMES */
-.gamespage {
-  height: 100vh;
-  width: 100%;
-  display: flex;
-  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.4);
-  object-fit: contain;
-  align-items: flex-start;
-}
 
-.gamespage-video {
-  object-fit: cover;
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-}
 
-.gamespage .wh-navbar > *,
-.gamespage .wh-nav-link {
-  color: white;
-}
-
-.gamespage .wh-navbar {
-  width: 100%;
-  z-index: 999;
-}
-
-.gamespage.wh-nav-link {
-  display: inline-block;
-  position: relative;
-}
-.gamespage.wh-nav-link:hover {
-  color: rgba(255, 255, 255, 0.9);
-}
-
-#gamesmainpage {
-  width: 100%;
-  height: 100vh;
-  position: fixed;
-  display: flex;
-  align-items: center;
-  justify-items: center;
-}
-
-.gamescontent {
-  flex: 1;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  min-width: 460px;
-  margin: 0;
-}
-
-.gametext {
-  display: flex;
-  justify-content: flex-start;
-  flex-direction: row-reverse;
-  gap: 24px;
-}
-
-.rectangle2 {
-  width: 20px;
-  height: 100px;
-  background: linear-gradient(360deg, rgba(129, 20, 20, 0) 0%, #ffffff 100%);
-  margin-top: 8px;
-  animation-duration: 0.7s;
-}
-
-.description2 {
-  color: white;
-  max-width: 450px;
-  text-align: justify;
-  line-height: 1.6;
-  font-weight: 500;
-  font-size: 22px;
-  animation-duration: 0.7s;
-}
-
-.partnerslogo {
-  height: 4.5em;
-}
-
-.carousel {
-  width: 100vw;
-  height: 100%;
-}
-
-@media screen and (max-width: 900px) {
-  #gamesmainpage {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .gamescontent {
-    /* same styling is applied to <Vertical Carousel /> in its own css file*/
-    width: 60vw;
-    margin-top: 20vh;
-  }
-}
 
 /* BLOG PAGE */
 
@@ -618,26 +520,94 @@ path {
 
 /* GAMES TWO PAGE */
 
-.carousel-control {
-  background: none;
-  color: rgba(255, 255, 255, 0.4);
-  font-size: 3em;
-  text-shadow: none;
-  margin-top: 30px;
-  opacity:1;
-  border: 1px solid red;
-}
-
-.left, .right {
-  border: 1px solid blue;
-}
-
-#CarouselBtns {
+.gamespage {
+  height: 100vh;
   width: 100%;
-  height: max-content;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.4);
+  object-fit: contain;
   align-items: center;
-  justify-content: space-between;
-  margin: 0 4%;
+  justify-content: flex-start;
+}
+
+.gamespage > * { border: 3px solid blue}
+
+.gamespage-video {
+  object-fit: cover;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+.gamespage .wh-navbar > *,
+.gamespage .wh-nav-link {
+  color: white;
+}
+
+.gamespage .wh-navbar {
+  width: 100%;
+  z-index: 999;
+}
+
+.gamespage.wh-nav-link {
+  display: inline-block;
+  position: relative;
+}
+.gamespage.wh-nav-link:hover {
+  color: rgba(255, 255, 255, 0.9);
+}
+
+
+ .gamescontent {
+  width: min-content;
+  height: 50vh;
+} 
+
+.gametext {
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: row-reverse;
+  gap: 24px;
+}
+
+.rectangle2 {
+  width: 20px;
+  height: 100px;
+  background: linear-gradient(360deg, rgba(129, 20, 20, 0) 0%, #ffffff 100%);
+  margin-top: 8px;
+  animation-duration: 0.7s;
+}
+
+.description2 {
+  color: white;
+  max-width: 450px;
+  text-align: justify;
+  line-height: 1.6;
+  font-weight: 500;
+  font-size: 22px;
+  animation-duration: 0.7s;
+}
+
+.partnerslogo {
+  height: 4.5em;
+}
+
+.carousel {
+  width: 100vw;
+  height: 100%;
+}
+
+@media screen and (max-width: 900px) {
+  #gamesmainpage {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .gamescontent {
+    /* same styling is applied to <Vertical Carousel /> in its own css file*/
+    width: 60vw;
+    margin-top: 20vh;
+  }
 }
