--- a/src/App.css
+++ b/src/App.css
@@ -531,8 +531,6 @@ path {
   justify-content: flex-start;
 }
 
-.gamespage > * { border: 3px solid blue}
-
 .gamespage-video {
   object-fit: cover;
   position: fixed;
@@ -559,17 +557,22 @@ path {
   color: rgba(255, 255, 255, 0.9);
 }
 
-
- .gamescontent {
-  width: min-content;
-  height: 50vh;
-} 
-
-.gametext {
+.gameinfo-container {
   display: flex;
-  justify-content: flex-start;
-  flex-direction: row-reverse;
-  gap: 24px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-width: 49vw;
+  height: 30vh;
+  transform: translateY(-17vh);
+  border: 1px solid greenyellow;
+}
+
+.shadows {
+  border: 1px solid blue;
+  height: 100vh;
+  width: 10vw;
+  position: absolute;
 }
 
 .rectangle2 {
@@ -582,7 +585,6 @@ path {
 
 .description2 {
   color: white;
-  max-width: 450px;
   text-align: justify;
   line-height: 1.6;
   font-weight: 500;
@@ -591,7 +593,12 @@ path {
 }
 
 .partnerslogo {
-  height: 4.5em;
+  height: 6.5em;
+}
+
+.platformslist {
+  border: 1px solid red;
+  margin: 0;
 }
 
 .carousel {
@@ -600,10 +607,6 @@ path {
 }
 
 @media screen and (max-width: 900px) {
-  #gamesmainpage {
-    flex-direction: column;
-    align-items: center;
-  }
 
   .gamescontent {
     /* same styling is applied to <Vertical Carousel /> in its own css file*/
