--- a/src/App.css
+++ b/src/App.css
@@ -699,7 +699,7 @@ form #debt-amount-slider input:checked:nth-child(9) ~ #debt-amount-pos {
 }
 form #debt-amount-slider #debt-amount-pos {
   display: block;
-  position: absolute;
+  position: relative;
   top: 25%;
   width: 12px;
   height: 12px;
@@ -709,7 +709,7 @@ form #debt-amount-slider #debt-amount-pos {
   transform: translate(-50%, -50%);
   border: 2px solid rgba(0, 0, 0, 0.1);
   opacity: 0;
-  z-index: 2;
+  z-index: 4;
 }
 form:valid #debt-amount-slider input + label::before {
   transform: translate(-50%, 45px) scale(0.9);
@@ -782,10 +782,14 @@ form:invalid + button {
   }
 }
 
-
 .carousel {
   width: 100vw;
   height: 100%;
+}
+
+label input .ovo:checked {
+ background-color: black;
+ color: black;
 }
 
 @media screen and (max-width: 900px) {
