--- a/src/App.css
+++ b/src/App.css
@@ -719,7 +719,7 @@ form:valid #debt-amount-slider input:checked + label::before {
   transform: translate(-50%, 45px) scale(1.1);
   transition: all 0.15s linear;
 }
-form + button {
+form + input[type=radio] {
   display: block;
   position: relative;
   margin: 56px auto 0;
@@ -736,23 +736,24 @@ form + button {
   user-select: none;
   cursor: pointer;
 }
-form + button:hover {
+form + input[type=radio]:hover {
   background: #000;
   color: #fff;
 }
-form + button:hover:active {
+form + input[type=radio]:hover:active {
   transform: scale(0.9);
 }
-form + button:focus {
+
+form + input[type=radio]:focus {
   background: #4caf50;
   border-color: #4caf50;
   color: #fff;
   pointer-events: none;
 }
-form + button:focus::before {
+form + input[type=radio]:focus::before {
   animation: spin 1s linear infinite;
 }
-form + button::before {
+form + input[type=radio]::before {
   display: inline-block;
   width: 0;
   opacity: 0;
