--- a/src/App.css
+++ b/src/App.css
@@ -140,24 +140,6 @@
   z-index: -1;
 }
 
-.gamespage .wh-navbar > *,
-.gamespage .wh-nav-link {
-  color: white;
-}
-
-.gamespage .wh-navbar {
-  width: 100%;
-  z-index: 999;
-}
-
-.gamespage.wh-nav-link {
-  display: inline-block;
-  position: relative;
-}
-.gamespage.wh-nav-link:hover {
-  color: rgba(255, 255, 255, 0.9);
-}
-
 #gamesmainpage {
   width: 100%;
   height: 100vh;
@@ -615,3 +597,268 @@ path {
   padding: 2vh 7vw;
   text-align: justify;
 }
+
+/* CONSULTING PAGE */ 
+
+#consultingpage {
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.5);
+  object-fit: contain;
+  align-items: flex-start;
+}
+
+.gamespage-video {
+  filter: grayscale(50%);
+  filter: blur(0.2em);
+  position:absolute;
+  height: 100%;
+}
+
+#introduction-container {
+  width: 100vw;
+  height: 90vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  color: white;
+  row-gap: 3.5em; 
+  text-shadow: black 2px 0 15px;
+}
+
+#introduction-container div > a {
+  padding: 10px;
+  margin: 30px;
+  border: 2px solid white;
+  border-radius: 6px;
+  text-decoration: none;
+  font-weight: 700;
+  color: white;
+}
+
+#introduction-container div > a:hover {
+ animation: turnToGrey 0.6s ease;
+ animation-fill-mode: forwards;
+}
+
+@keyframes turnToGrey {
+
+  from {  color: white;
+          border: 2px solid white;
+        }
+  to {    color: rgb(223, 100, 100);
+          border: 2px solid rgb(223, 100, 100);
+     }
+
+  }
+
+  #previous-work-container {
+    width: 100vw;
+    background-color: rgb(32, 32, 32);
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  #previous-work-container h1 {
+    font-weight: 900;
+  }
+
+  #games-helped {
+    width: 100vw;
+    height: 50vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    row-gap: 2em;
+  }
+
+  #games-worked {
+    width: 100vw;
+    height: 85vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    --s: 200px; /* control the size */
+    --c1: #1d1d1d;
+    --c2: #4e4f51;
+    --c3: #3c3c3c;
+    background:
+      repeating-conic-gradient(from 30deg,#0000 0 120deg,var(--c3) 0 180deg) 
+       calc(.5*var(--s)) calc(.5*var(--s)*0.577),
+      repeating-conic-gradient(from 30deg,var(--c1) 0 60deg,var(--c2) 0 120deg,var(--c3) 0 180deg);
+    background-size: var(--s) calc(var(--s)*0.577);
+  }
+
+  #games-img {
+    display: flex;
+    align-items: center;
+  }
+
+  #games-img > a {
+    width: 15em;
+    margin-right: 1.8em;
+    background: transparent;
+  }
+
+  .gamecards {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    height: 500px;
+  }
+
+.consulting-cards {
+  border-radius: 4px;
+  background: #181818;
+  height: 90%;
+  width: 28vw;
+  display: flex;
+  flex-flow: column nowrap;
+  margin: 3em;
+}
+
+.consulting-cards p { 
+  text-align: start;
+  padding: 30px;
+}
+
+.consulting-cards a {   
+  padding-top: 30px;
+  text-decoration: none;
+  color: white;
+}
+
+.item-img {
+  height: 50%;
+}
+
+#addons-made {
+  width: 100vw;
+  height: 50vh;
+  background-color: white;
+  color: #000000;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  row-gap: 2em;
+}
+
+#reviews-introductio h3 b, #addons-made h3 b, #games-worked h3 b, #games-helped h3 b { font-weight: 900; }
+
+#addons-icons { 
+  display: flex;
+  align-items: center;
+  margin: 0 3.5em;
+}
+
+#gallery-container {
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  gap: 25px;
+  padding: 25px;
+  width: 100vw;
+  height: 100vh;
+  background-color: #000;
+}
+
+#gallery-container > img {
+  width: 23vw;
+  height: 40vh;
+  object-fit:cover;
+}
+
+
+#reviews-introduction {
+  width: 100vw;
+  height: 40vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  text-align: center;
+  color: white;
+  text-shadow: black 2px 0 15px;
+  --s: 200px; /* control the size */
+  --_g: #00000000 90deg,rgb(95, 95, 95) 0;
+  background: 
+      conic-gradient(from 90deg at 2px 2px,var(--_g)),
+      conic-gradient(from 90deg at 1px 1px,var(--_g));
+  background-size: var(--s) var(--s), calc(var(--s)/5) calc(var(--s)/5);
+}
+
+#reviews-quotes {
+  width: 100vw;
+  height: 120vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  --s: 82px; /* control the size */
+  --c1: #f1f1f1;
+  --c2: #ffffff;
+  --c3: #fafafa;
+  --_g: var(--c3) 0 120deg,#0000 0;
+  background:
+    conic-gradient(from -60deg at 50% calc(100%/3),var(--_g)),
+    conic-gradient(from 120deg at 50% calc(200%/3),var(--_g)),
+    conic-gradient(from  60deg at calc(200%/3),var(--c3) 60deg,var(--c2) 0 120deg,#0000 0),
+    conic-gradient(from 180deg at calc(100%/3),var(--c1) 60deg,var(--_g)),
+    linear-gradient(90deg,var(--c1)   calc(100%/6),var(--c2) 0 50%,
+                          var(--c1) 0 calc(500%/6),var(--c2) 0);
+  background-size: calc(1.732*var(--s)) var(--s);
+}
+#reviews-quotes h1 { 
+  font-size: 40px;
+  margin-bottom: 7vh;
+  font-weight: bolder;
+}
+.quotepp-wrapper { width: 70px; }
+.quotepp-wrapper img {  border-radius: 100% }
+
+#all-quotes {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  gap: 6vh;
+}
+
+.quotecard {
+  border-radius: 8%;
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+  justify-content: space-between
+}
+
+.quotecard p { 
+  line-height: 30px;
+  font-size: medium;
+  text-align: start;
+  max-width: 540px;
+}
+
+.card-downside {
+  display: grid;
+  grid-template-columns: 10% 90%;
+  column-gap: 40px;
+}
+
+.quotetext-wrapper {
+  text-align: start;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+.quotetext-wrapper > p { font-size: medium; }
