--- a/src/App.css
+++ b/src/App.css
@@ -582,6 +582,7 @@ path {
   font-weight: 500;
   font-size: 22px;
   animation-duration: 0.7s;
+  text-shadow: rgb(51, 51, 51) 2px 0 10px;
 }
 
 .partnerslogo {
@@ -614,13 +615,12 @@ form #debt-amount-slider {
 form #debt-amount-slider::before {
   content: " ";
   position: absolute;
-  height: 3px;
-  width: 100%;
+  height: 2px;
   width: calc(100% * (4 / 5));
   top: 25%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background: rgba(255, 255, 255, 0.5);
+  background: #fff;
 }
 form #debt-amount-slider input, form #debt-amount-slider label {
   box-sizing: border-box;
@@ -679,37 +679,20 @@ form #debt-amount-slider input:checked + label::after {
   transform: translate(-50%, -50%) scale(0.75);
 }
 
-form #debt-amount-slider input:checked ~ #debt-amount-pos {
-  opacity: 1;
-}
-form #debt-amount-slider input:checked:nth-child(1) ~ #debt-amount-pos {
-  left: 10%;
-}
-form #debt-amount-slider input:checked:nth-child(3) ~ #debt-amount-pos {
-  left: 30%;
-}
-form #debt-amount-slider input:checked:nth-child(5) ~ #debt-amount-pos {
-  left: 50%;
-}
-form #debt-amount-slider input:checked:nth-child(7) ~ #debt-amount-pos {
-  left: 70%;
-}
-form #debt-amount-slider input:checked:nth-child(9) ~ #debt-amount-pos {
-  left: 90%;
-}
-form #debt-amount-slider #debt-amount-pos {
+#debt-amount-pos {
   display: block;
-  position: relative;
-  top: 25%;
+  position: absolute;
   width: 12px;
   height: 12px;
-  background: rgba(0, 0, 0, 0.5);
+  background: #000;
   border-radius: 50%;
   transition: all 0.15s ease-in-out;
   transform: translate(-50%, -50%);
-  border: 2px solid rgba(0, 0, 0, 0.1);
-  opacity: 0;
-  z-index: 4;
+  border: 2px solid #000;
+  opacity: 1;
+  z-index: 2;
+  top:25%;
+  left: 10%;
 }
 form:valid #debt-amount-slider input + label::before {
   transform: translate(-50%, 45px) scale(0.9);
@@ -718,69 +701,6 @@ form:valid #debt-amount-slider input + label::before {
 form:valid #debt-amount-slider input:checked + label::before {
   transform: translate(-50%, 45px) scale(1.1);
   transition: all 0.15s linear;
-}
-form + input[type=radio] {
-  display: block;
-  position: relative;
-  margin: 56px auto 0;
-  padding: 10px 20px;
-  appearance: none;
-  transition: all 0.15s ease-in-out;
-  font-family: inherit;
-  font-size: 24px;
-  font-weight: 600;
-  background: #fff;
-  border: 2px solid #000;
-  border-radius: 8px;
-  outline: 0;
-  user-select: none;
-  cursor: pointer;
-}
-form + input[type=radio]:hover {
-  background: #000;
-  color: #fff;
-}
-form + input[type=radio]:hover:active {
-  transform: scale(0.9);
-}
-
-form + input[type=radio]:focus {
-  background: #4caf50;
-  border-color: #4caf50;
-  color: #fff;
-  pointer-events: none;
-}
-form + input[type=radio]:focus::before {
-  animation: spin 1s linear infinite;
-}
-form + input[type=radio]::before {
-  display: inline-block;
-  width: 0;
-  opacity: 0;
-  content: "\f3f4";
-  font-family: "Font Awesome 5 Pro";
-  font-weight: 900;
-  margin-right: 0;
-  transform: rotate(0deg);
-}
-form:invalid + button {
-  pointer-events: none;
-  opacity: 0.25;
-}
-
-@keyframes spin {
-  from {
-    transform: rotate(0deg);
-    width: 24px;
-    opacity: 1;
-    margin-right: 12px;
-  }
-  to {
-    transform: rotate(360deg);
-    width: 24px;
-    opacity: 1;
-    margin-right: 12px;
-  }
 }
 
 .carousel {
