--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500&display=swap");
 
+@font-face {
+  font-family: 'AddLGBitmap09';
+  src: url('https://assets.codepen.io/217233/AddLGBitmap09.woff2') format('woff2'),
+    url('https://assets.codepen.io/217233/AddLGBitmap09.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
 .Homehero > * {
   font-family: "Montserrat", sans-serif;
   padding: 1em;
@@ -530,6 +539,108 @@ path {
   align-items: center;
   justify-content: flex-start;
   overflow-x: hidden;
+}
+
+.dedra-intro {
+  background: rgba(14, 3, 13, 0.94);
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: 99;
+  transition: all .3s;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+
+@keyframes fade-out {
+  from {
+    opacity: 100%;
+  }
+  to {
+    opacity: 0%;
+  }
+}
+
+.dedra-intro h3:last-child {
+  margin-top: 15vh;
+  font-family: 'AddLGBitmap09';
+}
+
+.dedra-intro h3:last-child:hover { 
+  color: #2f9eaf;
+  cursor: pointer;
+ }
+
+ 
+
+.title-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.dedra-title {
+  color: white;
+  font-family: Montserrat;
+  font-size: 100px;
+}
+
+.loader {
+  height: 70px;
+  width: 71px;
+  position: relative;
+  text-align: center;
+  animation: rotateFrame 2.5s infinite;
+  margin-left: 7px;
+}
+
+@keyframes rotateFrame {
+  0% {
+    transform: none;
+  }
+  
+  90% {
+    transform: none;
+  }
+  
+  100% {
+    transform: rotate(180deg);
+  }
+}
+
+.top {
+  animation: top 2.5s linear infinite;
+  border-top: 35px solid #fff;
+  border-right: 35px solid transparent;
+  border-left: 35px solid transparent;
+  height: 0px;
+  width: 1px;
+  transform-origin: 50% 100%;
+}
+
+@keyframes top {
+  90% { transform: scale(0.3); }
+  100% { transform: scale(0);}
+}
+
+.bottom {
+  animation: bottom 2.5s linear infinite;
+  border-right: 35px solid transparent;
+  border-bottom: 35px solid #fff;
+  border-left: 35px solid transparent;
+  height: 0px;
+  width: 1px;
+  transform: scale(0);
+  transform-origin: 50% 100%;
+}
+
+@keyframes bottom {
+  10% { transform: scale(0); }
+  90% { transform: scale(1); }
+  100% { transform: scale(1); }
 }
 
 .gamespage-video {
