No idea what changed

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -19,6 +19,12 @@
   box-shadow: rgb(0, 0, 0, 0.1) 0 5px 10px 1px;
 }
 
+.aboutpage .navbar-shadow {
+  background-color: rgb(255, 255, 255, 0.7);
+  box-shadow: rgb(0, 0, 0, 0.1) 0 5px 10px 1px;
+  backdrop-filter: blur(8px);
+}
+
 .navbar-shadow-white {
   background-color: black;
   box-shadow: rgb(0, 0, 0, 0.1) 0 5px 10px 1px;
