--- a/src/App.css
+++ b/src/App.css
@@ -718,10 +718,6 @@ path {
   padding: 0 25px;
 }
 
-.formcontainer {
-  border: 1px solid rgb(0, 21, 255);
-}
-
 @media screen and (max-width: 900px) {
   .connectmainpage {
     flex-direction: column;
@@ -743,20 +739,18 @@ path {
 }
 
 .faq-container {
-  border: 1px solid greenyellow;
   width: 100%;
   display: flex;
 }
 
 #main-doc {
-  margin: 60px 0 0 24vw;
   padding: 0 30px;
   display: flex;
   flex-direction: column;
+  flex: 2;
 }
 
 #faq-navbar {
-  border: 1px solid blue;
   overflow: auto;
   position: sticky;
 }
@@ -776,6 +770,8 @@ path {
   background: rgb(226, 226, 226);
   border: 1px solid black;
   height: 90vh;
+  overflow-y: scroll;
+  flex: 1;
 }
 
 #pp-navbar header {
@@ -837,7 +833,6 @@ path {
     border-left: 0;
   }
   #main-doc {
-    margin: auto;
     padding: 20px;
   }
 
@@ -889,6 +884,33 @@ path {
   color: white;
   row-gap: 3.5em;
   text-shadow: black 2px 0 15px;
+}
+
+#introduction-container h1 {
+  font-weight: bolder;
+  animation: flicker 3.5s infinite alternate;
+}
+
+/* Flickering animation */
+@keyframes flicker {
+    
+  0%, 18%, 22%, 25%, 53%, 57%, 100% {
+
+      text-shadow:
+      0 0 4px #fff,
+      0 0 11px #fff,
+      0 0 19px #fff,
+      0 0 40px #00E1C7,
+      0 0 80px #00E1C7,
+      0 0 90px #00E1C7,
+      0 0 100px #00E1C7,
+      0 0 150px #00E1C7;
+  
+  }
+  
+  20%, 24%, 55% {        
+      text-shadow: none;
+  }    
 }
 
 #introduction-container div > a {
@@ -980,16 +1002,16 @@ path {
 
 .gamecards {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   width: 100vw;
-  height: 500px;
+  height: max-content;
 }
 
 .consulting-cards {
   border-radius: 4px;
   background: #181818;
-  height: 90%;
+  height: fit-content;
   width: 28vw;
   display: flex;
   flex-flow: column nowrap;
@@ -1005,6 +1027,23 @@ path {
   padding-top: 30px;
   text-decoration: none;
   color: white;
+}
+
+/* hover effect on all consulting-cars links*/
+.consulting-cards a h1::after {
+  content: "";
+  position: absolute;
+  width: 0px;
+  height: 3px;
+  left: 50%;
+  bottom: 0;
+  background-color: rgb(255, 255, 255);
+  transition: all ease-in-out 0.2s;
+}
+
+.consulting-cards a h1:hover::after {
+  width: 100%;
+  left: 0;
 }
 
 .item-img {
