--- a/src/App.css
+++ b/src/App.css
@@ -1184,6 +1184,7 @@ path {
       var(--c3) 0 180deg
     );
   background-size: var(--s) calc(var(--s) * 0.577);
+  background-attachment:fixed;
 }
 
 #games-img {
@@ -1315,6 +1316,7 @@ path {
   background: conic-gradient(from 90deg at 2px 2px, var(--_g)),
     conic-gradient(from 90deg at 1px 1px, var(--_g));
   background-size: var(--s) var(--s), calc(var(--s) / 5) calc(var(--s) / 5);
+  background-attachment: fixed;
 }
 
 #reviews-quotes {
@@ -1347,6 +1349,7 @@ path {
       var(--c2) 0
     );
   background-size: calc(1.732 * var(--s)) var(--s);
+  background-attachment: fixed;
 }
 #reviews-quotes h1 {
   font-size: 40px;
